cambiato formato datepicker bootstrap

--- a/templates/pymbrum.html
+++ b/templates/pymbrum.html
@@ -227,7 +227,7 @@
                     var tag = "timbrumNotification"; // TODO: leggere da bean
 
                     $('#date').datepicker({
-                        'format': 'dd/mm/yyyy'
+                        'format': 'yyyy-mm-dd'
                     });
 
                     {% if timbrature %}
