scadenza sessione 1 ora

--- a/templates/pymbrum.html
+++ b/templates/pymbrum.html
@@ -156,8 +156,7 @@
                 </table>
                 {% if isToday %}
                     <p class="text-warning text-center">
-                        Puoi uscire alle <strong>{{ contatori.timeOfExit }}</strong> per completare
-                        le 7h 12m di lavoro
+                        Puoi uscire alle <strong>{{ contatori.timeOfExit }}</strong> per completare la giornata lavorativa
                     </p>
                 {% endif %}
             {% endif %}
