--- a/templates/pymbrum.html
+++ b/templates/pymbrum.html
@@ -97,7 +97,7 @@
                     </select>
                     </div>
                     <div class="form-group">
-                        <label for="username">Username</label> <input type="email"
+                        <label for="username">Username</label> <input type="text"
                                                                       name="username" class="form-control" id="username"
                                                                       placeholder="Username">
                     </div>
