--- a/templates/pymbrum.html
+++ b/templates/pymbrum.html
@@ -92,8 +92,8 @@
                 <form id="loginForm" action="/login" method="post">
                     <div class="form-group">
                         <label for="url">HRPortal URL</label><select class="form-control" name="url">
-                        <option value="https://hr.cineca.it/HRPortal">HR Cineca</option>
                         <option value="https://saas.hrzucchetti.it/hrpmaxmara">HR MM</option>
+                        <option> value="https://hr.cineca.it/HRPortal">HR Cineca</option>
                     </select>
                     </div>
                     <div class="form-group">
