--- a/templates/pymbrum.html
+++ b/templates/pymbrum.html
@@ -93,7 +93,7 @@
                     <div class="form-group">
                         <label for="url">HRPortal URL</label><select class="form-control" name="url">
                         <option value="https://saas.hrzucchetti.it/hrpmaxmara">HR MM</option>
-                        <option> value="https://hr.cineca.it/HRPortal">HR Cineca</option>
+                        <option disabled value="https://hr.cineca.it/HRPortal">HR Cineca</option>
                     </select>
                     </div>
                     <div class="form-group">
